// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mailto component 1`] = `
<a
  href="mailto:kguillotte@avalanche.ca"
  title="kguillotte@avalanche.ca"
>
  kguillotte@avalanche.ca
</a>
`;

exports[`mailto component 2`] = `
<a
  href="mailto:kguillotte@avalanche.ca"
  title="kguillotte@avalanche.ca"
>
  Karl Guillotte
</a>
`;
